--- a/v2/patrodent/templates/instalaciones.html
+++ b/v2/patrodent/templates/instalaciones.html
@@ -13,7 +13,7 @@
 <meta property="og:image" content="http{% if request.is_secure %}{% endif %}://{% static 'images/consulta5.jpg' %}" />
 {% endblock %}
 
-{% block class-patrodent-link %}class="active"{% endblock %}
+{% block class-clinica-link %}active{% endblock %}
 
 {% block title %}Instalaciones - {% endblock %}
 
