--- a/v2/patrodent/templates/templates/servicio.html
+++ b/v2/patrodent/templates/templates/servicio.html
@@ -28,7 +28,7 @@
                     <div class="alpha grid_23">
                         <div class="indent-l">
                             <div>
-                                <div class="title"><a href="">Servicios</a></div>
+                                <div class="title"><a href="">Servicios Dentales</a></div>
                                 <ul class="list-1 columns3">
                                     {% include "templates/inc.servicios.html" %}
                                 </ul>
