--- a/v2/patrodent/templates/analisis-anatomopatologico-muestras-orales.html
+++ b/v2/patrodent/templates/analisis-anatomopatologico-muestras-orales.html
@@ -1,4 +1,4 @@
-{% extends "templates/base.html" %}
+{% extends "templates/servicio.html" %}
 
 {% load static %}
 
@@ -11,9 +11,6 @@
 <meta property="og:type" content="image/jpeg" />
 <meta property="og:image" content="http{% if request.is_secure %}{% endif %}://{% static 'images/patrocinio_y_angela.jpg' %}" />
 {% endblock %}
-
-
-{% block class-patrodent-link %} active{% endblock %}
 
 {% block title %}Análisis anatomopatológico de muestras orales - {% endblock %}
 
@@ -48,7 +45,7 @@
 {% endblock %}
 
 
-{% block content %}
+{% block content-body-wrapper %}
     <div class="wrapper">
         <div class="alpha prefix_1 suffix_1">
             <h2 class="p3">Análisis anatomopatológico de muestras orales</h2>
@@ -61,3 +58,4 @@
         </div>
     </div>
 {% endblock %}
+{% block before-after-title-wrapper %}{% endblock %}
