--- a/v2/patrodent/templates/contacto.html
+++ b/v2/patrodent/templates/contacto.html
@@ -2,6 +2,8 @@
 
 {% load static %}
 
+{% block class-clinica-link %}active{% endblock %}
+
 {% block title %}Contacta con nosotros - {% endblock %}
 
 {% block metadescription %}Como contactar con la Clínica Dental Patrocinio Gómez Martínez (Patrodent){% endblock %}
@@ -13,8 +15,6 @@
 {% endblock %}
 
 {% block pageclass %}contact{% endblock %}
-
-{% block class-contacto-link %} active{% endblock %}
 
 {% block content %}
     <div class="wrapper">
@@ -28,10 +28,11 @@
                     <div class="extra-wrap map-margin">
                         <h5 class="indent-bot">Como encontrarnos</h5>
                         <dl class="contacts">
-                            <dt>Estamos disponibles de 9 a 21 horas</dt>
+                            <dt>Estamos disponibles de lunes a jueves de 16 a 21 horas y los viernes de  9 a 14 horas</dt>
                             <dt>Marqués de Paradas 22 1 º dcha<br/>41001 Sevilla</dt>
                             <dd><span>E-mail:</span><a class="link" href="mailto:info@patrodent.com">info@patrodent.com</a></dd>
-                            <dd><span>Teléfono:</span><a class="link" href="tel:954 21 14 22">954 21 14 22</a></dd>
+                            <dd><span>Teléfono:</span><a class="link" href="tel: 954211422">954211422</a></dd>
+                            <dd><span>Movil:</span><a class="link" href="tel: 618245151">618245151</a></dd>
                             <dd class="noLinkWhatsapp"><span>WhatsApp:</span><a class="link" href="https://api.whatsapp.com/send?phone=+34954211422&text=Hola%20quisiera%20hacerle%20una%20consulta" target="_blank">954 21 14 22</a></dd>
                             <dd><span>Facebook:</span><a class="link" href="https://www.facebook.com/patrodent.patrodent" target="_blank">patrodent.patrodent</a></dd>
                         </dl>
@@ -127,7 +128,7 @@
                         latitude:   37.390045,
                         longitude: -6.001344,
                         icon: {
-                            image: '{{ STATIC_URL}}images/gmap_patrodent.png'
+                            image: '{{ STATIC_URL }}images/gmap_patrodent.png'
                         },
                         info: {
                             popup: true,
