--- a/v2/patrodent/templates/templates/inc.tratamientos.html
+++ b/v2/patrodent/templates/templates/inc.tratamientos.html
@@ -7,12 +7,13 @@
 {% url 'template_view' "estetica" as estetica_url %}
 {% url 'template_view' "atm" as atm_url %}
 {% url 'template_view' "endodoncia" as endodoncia_url %}
-<li><a href="{{ odontologia_url }}" {% ifequal odontologia_url full_path %} class="active"{% endifequal %}><i></i>Odontología General</a></li>
-<li><a href="{{ endodoncia_url }}" {% ifequal endodoncia_url full_path %} class="active"{% endifequal %}><i></i>Endodoncia</a></li>
-<li><a href="{{ odontopediatria_url }}" {% ifequal odontopediatria_url full_path %} class="active"{% endifequal %}><i></i>Odontopediatría</a></li>
-<li><a href="{{ ortodoncia_url }}" {% ifequal ortodoncia_url full_path %} class="active"{% endifequal %}><i></i>Ortodoncia</a></li>
-<li><a href="{{ implantes_url }}" {% ifequal implantes_url full_path %} class="active"{% endifequal %}><i></i>Cirugía oral e implantes</a></li>
+<li><a href="{{ implantes_url }}" {% ifequal implantes_url full_path %} class="active"{% endifequal %}><i></i>Cirugía oral e implantología</a></li>
+<li><a href="{{ ortodoncia_url }}" {% ifequal ortodoncia_url full_path %} class="active"{% endifequal %}><i></i>Ortodoncia infantil y adultos</a></li>
 <li><a href="{{ periodoncia_url }}" {% ifequal periodoncia_url full_path %} class="active"{% endifequal %}><i></i>Periodoncia</a></li>
-<li><a href="{{ estetica_url }}" {% ifequal estetica_url full_path %} class="active"{% endifequal %}><i></i>Estética dental y blanqueamiento</a></li>
+<li><a href="{{ odontopediatria_url }}" {% ifequal odontopediatria_url full_path %} class="active"{% endifequal %}><i></i>Odontopediatría</a></li>
+<li><a href="{{ endodoncia_url }}" {% ifequal endodoncia_url full_path %} class="active"{% endifequal %}><i></i>Endodoncia</a></li>
+<li><a href="{{ estetica_url }}" {% ifequal estetica_url full_path %} class="active"{% endifequal %}><i></i>Estética dental</a></li>
 <li><a href="{{ protesis_url }}" {% ifequal protesis_url full_path %} class="active"{% endifequal %}><i></i>Prótesis dental e implantológica</a></li>
 <li><a href="{{ atm_url }}" {% ifequal atm_url full_path %} class="active"{% endifequal %}><i></i>Problemas de articulación (ATM)</a></li>
+
+{#<li><a href="{{ odontologia_url }}" {% ifequal odontologia_url full_path %} class="active"{% endifequal %}><i></i>Odontología General</a></li>#}
