changed logos to white and linkedin link

--- a/v2/patrodent/templates/templates/base.html
+++ b/v2/patrodent/templates/templates/base.html
@@ -192,7 +192,7 @@
                                    <a href="https://www.facebook.com/patrodent.patrodent" target="_blank"><img src="{% static 'images/facebook.png' %}" title="Facebook"></a>
                                 </li>
                                 <li>
-                                   <a href="https://www.linkedin.com/in/ángela-m-75988674/" target="_blank"><img src="{% static 'images/linkedin.png' %}" title="linkedin"></a>
+                                   <a href="http://linkedin.com/in/patrodent-clínica-dental-a589ab111" target="_blank"><img src="{% static 'images/linkedin.png' %}" title="linkedin"></a>
                                 </li>
                             </ul>
                         </div>
