--- a/v2/patrodent/templates/contacto.html
+++ b/v2/patrodent/templates/contacto.html
@@ -2,8 +2,6 @@
 
 {% load static %}
 
-{% block class-clinica-link %}active{% endblock %}
-
 {% block title %}Contacta con nosotros - {% endblock %}
 
 {% block metadescription %}Como contactar con la Clínica Dental Patrocinio Gómez Martínez (Patrodent){% endblock %}
@@ -20,23 +18,11 @@
     <div class="wrapper">
         <div class="alpha prefix_1 grid_14">
             <div class="border-1">
-                <h2 class="p3">Contacto</h2>
+                <h2 class="p3">Cómo Encontrarnos</h2>
                 <div class="wrapper">
                     <figure class="img-style img-indent">
                         <div id="map_canvas"></div>
                     </figure>
-                    <div class="extra-wrap map-margin">
-                        <h5 class="indent-bot">Como encontrarnos</h5>
-                        <dl class="contacts">
-                            <dt>Estamos disponibles de lunes a jueves de 16 a 21 horas y los viernes de  9 a 14 horas</dt>
-                            <dt>Marqués de Paradas 22 1 º dcha<br/>41001 Sevilla</dt>
-                            <dd><span>E-mail:</span><a class="link" href="mailto:info@patrodent.com">info@patrodent.com</a></dd>
-                            <dd><span>Teléfono:</span><a class="link" href="tel: 954211422">954211422</a></dd>
-                            <dd><span>Movil:</span><a class="link" href="tel: 618245151">618245151</a></dd>
-                            <dd class="noLinkWhatsapp"><span>WhatsApp:</span><a class="link" href="https://api.whatsapp.com/send?phone=+34954211422&text=Hola%20quisiera%20hacerle%20una%20consulta" target="_blank">954 21 14 22</a></dd>
-                            <dd><span>Facebook:</span><a class="link" href="https://www.facebook.com/patrodent.patrodent" target="_blank">patrodent.patrodent</a></dd>
-                        </dl>
-                    </div>
                     <div class="clear"></div>
                     <div class="map-margin">
                      <p>Nuestra clínica se encuentra en pleno centro de Sevilla. En la calle Marqués de Paradas frente al ambulatorio de la Seguridad Social. A 100 metros se encuentra el centro comercial Plaza de Armas en el cual hay un aparcamiento público abierto las 24 horas. A 150 metros está situada la Estación de Autobuses Plaza de Armas de donde parten autobuses para la parte norte y oeste de la provincia de Sevilla, así como a Madrid y otras rutas importantes.</p>
